; ModuleID = '/home/carl/AnghaBench/openssl/test/testutil/extr_tests.c_test_BN_abs_eq_word.c'
source_filename = "/home/carl/AnghaBench/openssl/test/testutil/extr_tests.c_test_BN_abs_eq_word.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"BIGNUM\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"abs==\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @test_BN_abs_eq_word(i8* %0, i32 %1, i8* %2, i8* %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  store i8* %0, i8** %8, align 8
  store i32 %1, i32* %9, align 4
  store i8* %2, i8** %10, align 8
  store i8* %3, i8** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  %16 = load i32*, i32** %12, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %24

18:                                               ; preds = %6
  %19 = load i32*, i32** %12, align 8
  %20 = load i32, i32* %13, align 4
  %21 = call i64 @BN_abs_is_word(i32* %19, i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %18
  store i32 1, i32* %7, align 4
  br label %44

24:                                               ; preds = %18, %6
  %25 = call i32* (...) @BN_new()
  store i32* %25, i32** %14, align 8
  %26 = load i32*, i32** %12, align 8
  %27 = call i32* @BN_dup(i32* %26)
  store i32* %27, i32** %15, align 8
  %28 = load i32*, i32** %15, align 8
  %29 = call i32 @BN_set_negative(i32* %28, i32 0)
  %30 = load i32*, i32** %14, align 8
  %31 = load i32, i32* %13, align 4
  %32 = call i32 @BN_set_word(i32* %30, i32 %31)
  %33 = load i8*, i8** %8, align 8
  %34 = load i32, i32* %9, align 4
  %35 = load i8*, i8** %10, align 8
  %36 = load i8*, i8** %11, align 8
  %37 = load i32*, i32** %15, align 8
  %38 = load i32*, i32** %14, align 8
  %39 = call i32 @test_fail_bignum_message(i32* null, i8* %33, i32 %34, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %35, i8* %36, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32* %37, i32* %38)
  %40 = load i32*, i32** %14, align 8
  %41 = call i32 @BN_free(i32* %40)
  %42 = load i32*, i32** %15, align 8
  %43 = call i32 @BN_free(i32* %42)
  store i32 0, i32* %7, align 4
  br label %44

44:                                               ; preds = %24, %23
  %45 = load i32, i32* %7, align 4
  ret i32 %45
}

declare dso_local i64 @BN_abs_is_word(i32*, i32) #1

declare dso_local i32* @BN_new(...) #1

declare dso_local i32* @BN_dup(i32*) #1

declare dso_local i32 @BN_set_negative(i32*, i32) #1

declare dso_local i32 @BN_set_word(i32*, i32) #1

declare dso_local i32 @test_fail_bignum_message(i32*, i8*, i32, i8*, i8*, i8*, i8*, i32*, i32*) #1

declare dso_local i32 @BN_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
